<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="4dp"
    android:paddingLeft="4dp"
    android:paddingTop="10dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_username"
        android:hint="@string/username"/>
    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_username"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_password"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/txt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_email"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone"/>

    <TextView
        android:id="@+id/tv_kelamin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenis_kelamin"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/txt_phone"
        android:layout_alignParentStart="true"/>

    <RadioButton
        android:id="@+id/rLak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/laki_laki"
        android:layout_marginStart="18dp"
        android:layout_alignBaseline="@+id/tv_kelamin"
        android:layout_alignBottom="@+id/tv_kelamin"
        android:layout_toEndOf="@+id/tv_kelamin"/>

    <RadioButton
        android:id="@+id/rPerempuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perempuan"
        android:layout_alignBaseline="@+id/rLak"
        android:layout_alignBottom="@+id/rLak"
        android:layout_toEndOf="@+id/rLak"
        android:layout_marginStart="11dp"/>

    <Button
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="#fff"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@+id/rLak"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"/>

    <Button
        android:id="@+id/bt_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:layout_below="@+id/bt_register"
        android:layout_alignParentStart="true"/>

</RelativeLayout>